kubernetes-monitoring/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: homework
  labels: &labels
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      containers:
        - name: nginx
          image: nginx:1.27.3-alpine3.20
          ports:
            - name: http
              containerPort: 80
            - name: status
              containerPort: 8080
          volumeMounts:
            - name: webserver-files
              mountPath: /homework
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/status.conf
              subPath: status.conf
            - name: nginx-config
              mountPath: /etc/nginx/templates/default.conf.template
              subPath: default.conf.template
        - name: nginx-exporter
          image: nginx/nginx-prometheus-exporter:1.4.0
          args:
            - "--nginx.scrape-uri=http://127.0.0.1:8080/server-status"
          ports:
            - name: metrics
              containerPort: 9113
      volumes:
        - name: webserver-files
          emptyDir: {}

        - name: nginx-config
          configMap:
            name: nginx-config
