kubernetes-monitoring/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: homework
  labels: &labels
    app: nginx
spec:
  selector: *labels
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: metrics
      port: 9113
      targetPort: metrics
